2005-10-26 14:35 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerLengthBetween) to
	compute the length of an edge between to s values (needs test).
	* src/gridedger.c (gridedgerLengthToS) completed with binary
	search (Newton-Rapson would be better).

2005-10-26 13:20 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerDiscreteSegmentAndRatio) for DRY,
	extracted repeated code from gridedgerSegmentT and
	gridedgerSegmentMap to use in gridedgerLengthToS.

2005-10-23 21:29 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerLengthToS) started routine (blank,
	except for comments) that will give next s value for certain
	length edge.

2005-10-20 11:48 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerSegmentMap) map linearly interpolated
	from nodes in s.

2005-10-20 11:17 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridNewGeometryEdgeSiteAllowedAt) if t is near an
	edge segment endpoint, test to see if the distance between the
	exsiting face node and the projected face node is larger than
	tolerence. (testing face areas would always fail, zero area).

2005-10-20 10:52 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerSegmentT) if
	gridNewGeometryEdgeSiteAllowedAt is false return NULL. 
	(and leave *t value set).

2005-10-20 10:46 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridNewGeometryEdgeSiteAllowedAt) fixed multiple
	bugs relating to use of unitiaized memeory: obtain edgeId, compute
	ratio, index nodes1 instead of nodes0 twice, set uv[*],[1]. unit
	tests save the day!

2005-10-18 12:27 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerSegmentT) linearly interpolate the t
	value inside a CAD edge segment.

2005-10-18 10:46 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerCreate) requres the edgeId to be specifed.
	* src/gridedger.c (gridedgerEdgeId) returne the edgeId.

2005-10-17 20:11 Mike Park  <mike.park@nasa.gov>
