@@ -36,6 +36,21 @@ VALUE gridedger_edgeId( VALUE self )
   return INT2NUM( gridedgerEdgeId( ge ) );
 }
 
+VALUE gridedger_nodes( VALUE self )
+{
+  GET_GE_FROM_SELF;
+  return INT2NUM( gridedgerNodes( ge ) );
+}
+
+VALUE gridedger_nodeS( VALUE self, VALUE rb_node )
+{
+  int node;
+  double s;
+  GET_GE_FROM_SELF;
+  node = NUM2INT( rb_node );
+  return (ge == gridedgerNodeS( ge, node, &s )?rb_float_new(s):Qnil);
+}
+
 VALUE gridedger_discreteSegmentAndRatio( VALUE self, VALUE rb_segment )
 {
   double segment;
@@ -84,6 +99,14 @@ VALUE gridedger_lengthToS( VALUE self, VALUE rb_segment, VALUE rb_length )
   return (ge == gridedgerLengthToS( ge, segment, length, &s )?rb_float_new(s):Qnil);
 }
 
+VALUE gridedger_discretize( VALUE self, VALUE rb_length )
+{
+  double length;
+  GET_GE_FROM_SELF;
+  length = NUM2DBL( rb_length );
+  return (ge == gridedgerDiscretize( ge, length )?self:Qnil);
+}
+
 VALUE cGridEdger;
 
 void Init_GridEdger() 
@@ -91,9 +114,12 @@ void Init_GridEdger()
   cGridEdger = rb_define_class( "GridEdger", rb_cObject );
   rb_define_singleton_method( cGridEdger, "new", gridedger_new, 2 );
   rb_define_method( cGridEdger, "edgeId", gridedger_edgeId, 0 );
+  rb_define_method( cGridEdger, "nodes", gridedger_nodes, 0 );
+  rb_define_method( cGridEdger, "nodeS", gridedger_nodeS, 1 );
   rb_define_method( cGridEdger, "discreteSegmentAndRatio", 
 		    gridedger_discreteSegmentAndRatio, 1 );
   rb_define_method( cGridEdger, "segmentT", gridedger_segmentT, 1 );
   rb_define_method( cGridEdger, "segmentMap", gridedger_segmentMap, 1 );
   rb_define_method( cGridEdger, "lengthToS", gridedger_lengthToS, 2 );
+  rb_define_method( cGridEdger, "discretize", gridedger_discretize, 1 );
 }
